Updating the JS file

--- a/index.html
+++ b/index.html
@@ -52,5 +52,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/Diegofergamboa" target="_blank">Diego Fernando Ortiz Gamboa</a>.
   </footer>
-</body>
+  <script src="/static/js/index.js"></script>
+  </body>
 </html>
