directories and styling the javascript fetch uptading

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <h2>Jeremy Robson</h2>
     </div>
     <div>
-      <ul>
-        <li>Daily</li>
-        <li>Weekly</li>
-        <li>Monthly</li>
-      </ul>
+      <div>
+        <button id="dailly">Daily</button>
+        <button id="weekly">Weekly</button>
+        <button id="monthly">Monthly</button>
+      </div>
     </div>
   </section>
   <section class="section-tasks">
