styling on profile section complete

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 </head>
 <body>
   <section class="section-profile">
-    <div>
-      <img src="/images/image-jeremy.png" alt="Perfil del usuario">
-      <p>Report for</p>
-      <h2>Jeremy Robson</h2>
-    </div>
-    <div>
-      <div>
-        <button id="dailly">Daily</button>
-        <button id="weekly">Weekly</button>
-        <button id="monthly">Monthly</button>
+    <div class="information-profile">
+      <img class=profile-image src="/images/image-jeremy.png" alt="Perfil del usuario">
+      <div class="p-profile">
+        <p>Report for</p>
+        <p>Jeremy Robson</p>
       </div>
+    </div>
+    <div class="buttons">
+      <button class="dailly">Daily</button>
+      <button class="weekly">Weekly</button>
+      <button class="monthly">Monthly</button>
     </div>
   </section>
   <section class="section-tasks">
