size of the cointainer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
   </section>
   <section class="section-tasks">
-    <div class="container-task">
+    <!-- <div class="container-task">
       <div class="div-task"></div>
     </div>
     <div class="container-task">
@@ -46,7 +46,7 @@
     </div>
     <div class="container-task">
       <div class="div-task"></div>
-    </div>
+    </div> -->
   </section>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
