Working on the setting from the button on the information data changed

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       </div>
     </div>
     <div class="buttons">
-      <button class="dailly">Daily</button>
-      <button class="weekly">Weekly</button>
-      <button class="monthly">Monthly</button>
+      <button class="daily" onclick="loadDailyActivity()" type="button">Daily</button>
+      <button class="weekly" onclick="loadWeeklyActivity()" type="button">Week</button>
+      <button class="monthly" onclick="loadMonthlyActivity()" type="button">Monthly</button>
     </div>
   </section>
   <section class="section-tasks">
