--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/static/css/main.css">
   <title>Frontend Mentor | Time tracking dashboard</title>
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <section class="section-profile">
@@ -23,31 +19,12 @@
       </div>
     </div>
     <div class="buttons">
-      <button class="daily" onclick="loadDailyActivity()" type="button">Daily</button>
-      <button class="weekly" onclick="loadWeeklyActivity()" type="button">Week</button>
-      <button class="monthly" onclick="loadMonthlyActivity()" type="button">Monthly</button>
+      <button class="daily btn" onclick="loadDailyActivity()" type="button">Daily</button>
+      <button class="weekly btn" onclick="loadWeeklyActivity()" type="button">Week</button>
+      <button class="monthly btn" onclick="loadMonthlyActivity()" type="button">Monthly</button>
     </div>
   </section>
-  <section class="section-tasks">
-    <!-- <div class="container-task">
-      <div class="div-task"></div>
-    </div>
-    <div class="container-task">
-      <div class="div-task"></div>
-    </div>
-    <div class="container-task">
-      <div class="div-task"></div>
-    </div>
-    <div class="container-task">
-      <div class="div-task"></div>
-    </div>
-    <div class="container-task">
-      <div class="div-task"></div>
-    </div>
-    <div class="container-task">
-      <div class="div-task"></div>
-    </div> -->
-  </section>
+  <section class="section-tasks"></section>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/Diegofergamboa" target="_blank">Diego Fernando Ortiz Gamboa</a>.
